--- a/index.html
+++ b/index.html
@@ -50,146 +50,166 @@
 
       <div id="mainFirstFoldContainer">
         <div>
-          <div id="headingTextContainer">
-            <h1>Payments designed for</h1>
-            <div id="textRevealEffectContainer">
-              <div>
-                <div class="allSymbols">
-                  <div class="firstRow-onePair firstRow">¥</div>
-                  <div class="secondRow-onePair secondRow">¥</div>
-                  <div class="thirdRow-onePair thirdRow">₣</div>
-                  <div class="fourthRow-onePair fourthRow">G</div>
+          <div>
+            <div id="headingTextContainer">
+              <h1>Payments designed for</h1>
+              <div id="textRevealEffectContainer">
+                <div>
+                  <div class="allSymbols">
+                    <div class="firstRow-onePair firstRow">¥</div>
+                    <div class="secondRow-onePair secondRow">¥</div>
+                    <div class="thirdRow-onePair thirdRow">₣</div>
+                    <div class="fourthRow-onePair fourthRow">G</div>
+                  </div>
+
+                  <div class="allSymbols">
+                    <div class="firstRow-secondPair firstRow">₹</div>
+                    <div class="secondRow-secondPair secondRow">¥</div>
+                    <div class="thirdRow-secondPair thirdRow">₹</div>
+                    <div class="fourthRow-secondPair fourthRow">L</div>
+                  </div>
+
+                  <div class="allSymbols">
+                    <div class="firstRow-thirdPair firstRow">£</div>
+                    <div class="secondRow-thirdPair secondRow">₣</div>
+                    <div class="thirdRow-thirdPair thirdRow">€</div>
+                    <div class="fourthRow-thirdPair fourthRow">O</div>
+                  </div>
+
+                  <div class="allSymbols">
+                    <div class="firstRow-fourthPair firstRow">₣</div>
+                    <div class="secondRow-fourthPair secondRow">₣</div>
+                    <div class="thirdRow-fourthPair thirdRow">€</div>
+                    <div class="fourthRow-fourthPair fourthRow">B</div>
+                  </div>
+
+                  <div class="allSymbols">
+                    <div class="firstRow-fifthPair firstRow">¥</div>
+                    <div class="secondRow-fifthPair secondRow">¥</div>
+                    <div class="thirdRow-fifthPair thirdRow">₣</div>
+                    <div class="fourthRow-fifthPair fourthRow">A</div>
+                  </div>
+
+                  <div class="allSymbols">
+                    <div class="firstRow-sixthPair firstRow">$</div>
+                    <div class="secondRow-sixthPair secondRow">R</div>
+                    <div class="thirdRow-sixthPair thirdRow">£</div>
+                    <div class="fourthRow-sixthPair fourthRow">L</div>
+                  </div>
                 </div>
 
-                <div class="allSymbols">
-                  <div class="firstRow-secondPair firstRow">₹</div>
-                  <div class="secondRow-secondPair secondRow">¥</div>
-                  <div class="thirdRow-secondPair thirdRow">₹</div>
-                  <div class="fourthRow-secondPair fourthRow">L</div>
-                </div>
+                <div>
+                  <div class="allSymbols">
+                    <div class="firstRow-seventhPair firstRow">$</div>
+                    <div class="secondRow-seventhPair secondRow">¥</div>
+                    <div class="thirdRow-seventhPair thirdRow">R</div>
+                    <div class="fourthRow-seventhPair fourthRow">O</div>
+                  </div>
 
-                <div class="allSymbols">
-                  <div class="firstRow-thirdPair firstRow">£</div>
-                  <div class="secondRow-thirdPair secondRow">₣</div>
-                  <div class="thirdRow-thirdPair thirdRow">€</div>
-                  <div class="fourthRow-thirdPair fourthRow">O</div>
-                </div>
+                  <div class="allSymbols">
+                    <div class="firstRow-seventhPair firstRow">R</div>
+                    <div class="secondRow-seventhPair secondRow">€</div>
+                    <div class="thirdRow-seventhPair thirdRow">₣</div>
+                    <div class="fourthRow-seventhPair fourthRow">U</div>
+                  </div>
 
-                <div class="allSymbols">
-                  <div class="firstRow-fourthPair firstRow">₣</div>
-                  <div class="secondRow-fourthPair secondRow">₣</div>
-                  <div class="thirdRow-fourthPair thirdRow">€</div>
-                  <div class="fourthRow-fourthPair fourthRow">B</div>
-                </div>
+                  <div class="allSymbols">
+                    <div class="firstRow-sixthPair firstRow">€</div>
+                    <div class="secondRow-sixthPair secondRow">R</div>
+                    <div class="thirdRow-sixthPair thirdRow">R</div>
+                    <div class="fourthRow-sixthPair fourthRow">T</div>
+                  </div>
 
-                <div class="allSymbols">
-                  <div class="firstRow-fifthPair firstRow">¥</div>
-                  <div class="secondRow-fifthPair secondRow">¥</div>
-                  <div class="thirdRow-fifthPair thirdRow">₣</div>
-                  <div class="fourthRow-fifthPair fourthRow">A</div>
-                </div>
+                  <div class="allSymbols">
+                    <div class="firstRow-fifthPair firstRow">₣</div>
+                    <div class="secondRow-fifthPair secondRow">₹</div>
+                    <div class="thirdRow-fifthPair thirdRow">$</div>
+                    <div class="fourthRow-fifthPair fourthRow">C</div>
+                  </div>
 
-                <div class="allSymbols">
-                  <div class="firstRow-sixthPair firstRow">$</div>
-                  <div class="secondRow-sixthPair secondRow">R</div>
-                  <div class="thirdRow-sixthPair thirdRow">£</div>
-                  <div class="fourthRow-sixthPair fourthRow">L</div>
-                </div>
-              </div>
+                  <div class="allSymbols">
+                    <div class="firstRow-fourthPair firstRow">£</div>
+                    <div class="secondRow-fourthPair secondRow">$</div>
+                    <div class="thirdRow-fourthPair thirdRow">€</div>
+                    <div class="fourthRow-fourthPair fourthRow">O</div>
+                  </div>
 
-              <div>
-                <div class="allSymbols">
-                  <div class="firstRow-seventhPair firstRow">$</div>
-                  <div class="secondRow-seventhPair secondRow">¥</div>
-                  <div class="thirdRow-seventhPair thirdRow">R</div>
-                  <div class="fourthRow-seventhPair fourthRow">O</div>
-                </div>
+                  <div class="allSymbols">
+                    <div class="firstRow-thirdPair firstRow">R</div>
+                    <div class="secondRow-thirdPair secondRow">€</div>
+                    <div class="thirdRow-thirdPair thirdRow">€</div>
+                    <div class="fourthRow-thirdPair fourthRow">M</div>
+                  </div>
 
-                <div class="allSymbols">
-                  <div class="firstRow-seventhPair firstRow">R</div>
-                  <div class="secondRow-seventhPair secondRow">€</div>
-                  <div class="thirdRow-seventhPair thirdRow">₣</div>
-                  <div class="fourthRow-seventhPair fourthRow">U</div>
-                </div>
+                  <div class="allSymbols">
+                    <div class="firstRow-secondPair firstRow">$</div>
+                    <div class="secondRow-secondPair secondRow">₹</div>
+                    <div class="thirdRow-secondPair thirdRow">$</div>
+                    <div class="fourthRow-secondPair fourthRow">E</div>
+                  </div>
 
-                <div class="allSymbols">
-                  <div class="firstRow-sixthPair firstRow">€</div>
-                  <div class="secondRow-sixthPair secondRow">R</div>
-                  <div class="thirdRow-sixthPair thirdRow">R</div>
-                  <div class="fourthRow-sixthPair fourthRow">T</div>
-                </div>
-
-                <div class="allSymbols">
-                  <div class="firstRow-fifthPair firstRow">₣</div>
-                  <div class="secondRow-fifthPair secondRow">₹</div>
-                  <div class="thirdRow-fifthPair thirdRow">$</div>
-                  <div class="fourthRow-fifthPair fourthRow">C</div>
-                </div>
-
-                <div class="allSymbols">
-                  <div class="firstRow-fourthPair firstRow">£</div>
-                  <div class="secondRow-fourthPair secondRow">$</div>
-                  <div class="thirdRow-fourthPair thirdRow">€</div>
-                  <div class="fourthRow-fourthPair fourthRow">O</div>
-                </div>
-
-                <div class="allSymbols">
-                  <div class="firstRow-thirdPair firstRow">R</div>
-                  <div class="secondRow-thirdPair secondRow">€</div>
-                  <div class="thirdRow-thirdPair thirdRow">€</div>
-                  <div class="fourthRow-thirdPair fourthRow">M</div>
-                </div>
-
-                <div class="allSymbols">
-                  <div class="firstRow-secondPair firstRow">$</div>
-                  <div class="secondRow-secondPair secondRow">₹</div>
-                  <div class="thirdRow-secondPair thirdRow">$</div>
-                  <div class="fourthRow-secondPair fourthRow">E</div>
-                </div>
-
-                <div class="allSymbols">
-                  <div class="firstRow-onePair firstRow">£</div>
-                  <div class="secondRow-onePair secondRow">R</div>
-                  <div class="thirdRow-onePair thirdRow">₹</div>
-                  <div class="fourthRow-onePair fourthRow">S</div>
+                  <div class="allSymbols">
+                    <div class="firstRow-onePair firstRow">£</div>
+                    <div class="secondRow-onePair secondRow">R</div>
+                    <div class="thirdRow-onePair thirdRow">₹</div>
+                    <div class="fourthRow-onePair fourthRow">S</div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
 
-        <div id="ctaContainer">
-          <h2>
-            <span>Juspay</span> powers leading enterprises around the world,
-            simplifying global coverage, orchestration, conversions, fraud
-            reduction and seamless customer experiences.
-          </h2>
+          <div id="ctaContainer">
+            <h2>
+              <span>Juspay</span> powers leading enterprises around the world,
+              simplifying global coverage, orchestration, conversions, fraud
+              reduction and seamless customer experiences.
+            </h2>
 
-          <div id="ctaButton">
-            <a>
-              <div>
-                <div class="ctaButtonText">Schedule a demo</div>
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 24 24"
-                  width="24"
-                  height="24"
-                  fill="rgba(255,255,255,1)"
-                >
-                  <path
-                    d="M12.1717 12.0005L9.34326 9.17203L10.7575 7.75781L15.0001 12.0005L10.7575 16.2431L9.34326 14.8289L12.1717 12.0005Z"
-                  ></path>
-                </svg>
-              </div>
-            </a>
+            <div id="ctaButton">
+              <a>
+                <div>
+                  <div class="ctaButtonText">Schedule a demo</div>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 24 24"
+                    width="24"
+                    height="24"
+                    fill="rgba(255,255,255,1)"
+                  >
+                    <path
+                      d="M12.1717 12.0005L9.34326 9.17203L10.7575 7.75781L15.0001 12.0005L10.7575 16.2431L9.34326 14.8289L12.1717 12.0005Z"
+                    ></path>
+                  </svg>
+                </div>
+              </a>
+            </div>
           </div>
         </div>
       </div>
 
-      <h2 class="test">Hello</h2>
+      <div id="columnsCtn">
+        <div id="followCursor">
+          <img />
+
+          <div id="cursorInfo">
+            <span id="cursorInfoLineOne"></span>
+            <span id="cursorInfoLineTwo"></span>
+          </div>
+        </div>
+
+        <div id="firstColumn"></div>
+        <div id="secondColumn"></div>
+        <div id="thirdColumn"></div>
+      </div>
     </div>
     <div id="secondFoldContainer"></div>
 
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.slim.min.js"
+      integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8="
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
       integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
