error fix and deployment

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="icon" href="./images/juspayfavicon.png" />
+    <title>Juspay | South-East Asia</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -288,22 +289,22 @@
                 <div>
                   <div class="allSymbols">
                     <div
-                      class="firstRow-seventhPair firstRow-seventhPair-right firstRow"
+                      class="firstRow-seventhPair firstRow-seventhPair-left firstRow"
                     >
                       $
                     </div>
                     <div
-                      class="secondRow-seventhPair secondRow-seventhPair-right secondRow"
+                      class="secondRow-seventhPair secondRow-seventhPair-left secondRow"
                     >
                       ¥
                     </div>
                     <div
-                      class="thirdRow-seventhPair thirdRow-seventhPair-right thirdRow"
+                      class="thirdRow-seventhPair thirdRow-seventhPair-left thirdRow"
                     >
                       R
                     </div>
                     <div
-                      class="fourthRow-seventhPair fourthRow-seventhPair-right fourthRow"
+                      class="fourthRow-seventhPair fourthRow-seventhPair-left fourthRow"
                     >
                       O
                     </div>
